[package]
name = "slice-ansi"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
description = "Slice a string by terminal display column, preserving ANSI styling and wide (CJK) characters. A Rust take on Node's slice-ansi."
documentation = "https://docs.rs/slice-ansi"
repository = "https://github.com/trananhtung/slice-ansi"
homepage = "https://github.com/trananhtung/slice-ansi"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ansi", "slice", "terminal", "width", "substring"]
categories = ["command-line-interface", "text-processing", "no-std"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
unicode-width = "0.2"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
